good pie, jojooo

--- a/projects/restaurant/home.html
+++ b/projects/restaurant/home.html
@@ -37,7 +37,7 @@
         </div>
         <div id="header">
             <br>
-            <h1>Feast like warriors</h1><button class="headerbutton">Choose Main Dish</button>
+            <h1>Feast like warriors</h1><button href="menu.html#main-courses" class="headerbutton">Choose Main Dish</button>
             <br>
         </div>
         <div class="center-column">
