--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -37,7 +37,7 @@
         </div>
         <div id="header-2">
             <br>
-            <h1>This Week's Special</h1><button class="headerbutton">Order Now</button>
+            <h1>This Week's Special</h1><button href="#" class="headerbutton">Order Now</button>
             <br>
         </div>
         <div class="center-column-2">
